Version 16     ???

--Added support for temporary logins to existing accounts with account details
  not saved locally.

--REFRESH button is now hidden for 5 seconds after a refresh to prevent refresh
  spam.

--Added missing webProxy setting file, and added note to readme
  (thanks chequers).





Version 15     Live Server Fixes

--Fixed revealed-square leak if opponent posts their revealed square before we
  get a chance to request the pre-reveal game state.  Also fixed bet leaks that
  could happen through similar bad timing (thanks several forum members).

--Increased grace period for move timeouts, and increased timeout for
  end_round.  The existing timeout for end_round could be crossed too easily
  with legitimate network and server delays (thanks Daniel K).

--Fixed bug on server when opponent leaves immediately after they start the
  next round but before you start the next round.  This caused strange client
  coin movements (thanks Daniel K).

--Added support for 3- and 4-word random names for when we exhaust the supply
  of 2-word random names.



Version 15     2015-February-9

--Fixed crash when mousing over not-yet-loaded game board (was incorrectly
  trying to update score graph based on a null game board) (thanks Benjamin Y).




Version 14     Live Server Fixes

--Fixed DENIED error when game creator quits while waiting for an opponent and
  somebody joins the stale game before it has been flushed (thanks Josh C).

--Fixed so that a player who has been approved to go over the $500 deposit
  limit for one card can also deposit more money using other cards (thanks
  Cayce U).





Version 14     2015-February-6  

--Fixed bug in mousing over uncolored squares that was not properly removing
  that column from the possibility space when computing possible opponent
  scores.

--Improved green score graph behavior when there is only one column left and
  it must be given to your opponent (before, the graph behaved as if your